--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/friedrice.html">Friedrice</a></li>
+        <li><a href="recipes/noodles.html">Noodles</a></li>
+
+
+    </ul>
+
 </body>
 
 </html>
