Update the noodles recipe page

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -11,17 +11,28 @@
     <h1>Noodles</h1>
     <img src="../images/noodles.jpg" alt="picture of a delicious noodles">
     <h1>Description</h1>
-    <p>In this recipe, to keep things simple, we chose to layer our lasagna as pasta on bottom, then meat mixture and cheese then back to the pasta and repeating. Finally, we finish with the sauce and a few slices of fresh mozzarella cheese.</p>
-    <p>But you can mix things up if you want. Just don't make the sauce layer too thick. The lasagna might not hold together well without the structure of the noodles.</p>
+    <p>Easy Singapore noodles recipe featuring rice vermicelli noodles tossed in a curry sauce with juicy shrimp, rich BBQ char siu pork, crispy onions and peppers. It’s so scrumptious and bursting with flavor. It’s quick to make and a perfect one-pot meal
+        for your weekday dinner.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>1 pound ground beef</li>
+        <li>Sliced char siu pork (or other type of meat you plan to use)</li>
+        <li>Shrimp, sliced if needed</li>
+        <li>Mixed sauce</li>
+        <li>Minced garlic, ginger and onion</li>
+        <li>Rice vermicelli noodles</li>
+        <li>Beaten eggs</li>
+        <li>Sliced pepper</li>
+        <li>Sliced carrots</li>
 
     </ul>
     <h2>Steps</h2>
     <ol>
-
-
+        <li>Scramble the eggs</li>
+        <li>Cook ginger, garlic and onion</li>
+        <li>Sear the shrimp and char siu</li>
+        <li>Cook the carrots</li>
+        <li>Toss it with noodels and the sauce</li>
+        <li>Add the egg back and pepper, give it a final toss</li>
     </ol>
 </body>
 
