--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -40,8 +40,9 @@
             cheeses. Repeat layers, and spoon on the remaining meat mixture. Arrange the mozzarella slices on top. Cover the baking dish with foil. Bake at 350°F for 35 to 45 minutes. Remove the foil, and continue to bake for an additional 10 minutes.</li>
         <li>Let the finished dish rest for 10 minutes before serving. Top with chopped parsley, if desired.</li>
 
-
     </ol>
+
+    <a href="../index.html">Back</a>
 </body>
 
 </html>
